--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-spring</artifactId>
+            <version>5.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
